--- a/index.1.html
+++ b/index.1.html
@@ -9,13 +9,13 @@
 <body>
   <nav>
     <div class="wrapper">
-        <div class="logo"><a href=''>smkcitranegara.</a></div>
+        <div class="logo"><a href=''>smkcitranegara</a></div>
         <div class="menu">
             <ul>
                 <il><a href="#home">Home</a></il>
                 <il><a href="#about">About</a></il>
-                <il><a href="#contacts">contacts</a></il>
-                <il><a href=""class"tbl-biru">sign up</a></il>
+                <il><a href="#contacts">Contacts</a></il>
+                <il><a href=""class"tbl-biru">Sign Up</a></il>
             </ul>
         </div>
         </div>
