sedang mencari tutor css

--- a/About.html
+++ b/About.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" type="text/css" href="aboutStyle.css">
 </head>
 <body>
+    <nav>
+        <div class="wrapper">
+            <div class="logo"><a href=''>smkcitranegara</a></div>
+            <div class="menu">
+                <ul>
+                    <il><a href="index.1.html">Home</a></il>
+                    <il><a href="About.html">About</a></il>
+                    <il><a href="kontak.html">Contacts</a></il>
+                    <il><a href=""class"tbl-biru">Sign Up</a></il>
+                </ul>
+            </div>
+            </div>
+        </div>
+      </nav>  
     <div class="about">
         <div class="inner-section">
             <h1>About Us</h1>
