--- a/index.1.html
+++ b/index.1.html
@@ -12,9 +12,9 @@
         <div class="logo"><a href=''>smkcitranegara</a></div>
         <div class="menu">
             <ul>
-                <il><a href="#home">Home</a></il>
-                <il><a href="#about">About</a></il>
-                <il><a href="#contacts">Contacts</a></il>
+                <il><a href="index.1.html">Home</a></il>
+                <il><a href="About.html">About</a></il>
+                <il><a href="kontak.html">Contacts</a></il>
                 <il><a href=""class"tbl-biru">Sign Up</a></il>
             </ul>
         </div>
