--- a/kontak.html
+++ b/kontak.html
@@ -11,6 +11,20 @@
     <link rel="stylesheet" href="kontakstyle.css">
 </head>
 <body>
+    <nav>
+        <div class="wrapper">
+            <div class="logo"><a href=''>smkcitranegara</a></div>
+            <div class="menu">
+                <ul>
+                    <il><a href="index.1.html">Home</a></il>
+                    <il><a href="About.html">About</a></il>
+                    <il><a href="kontak.html">Contacts</a></il>
+                    <il><a href=""class"tbl-biru">Sign Up</a></il>
+                </ul>
+            </div>
+            </div>
+        </div>
+      </nav>
     <section id="section-wrapper">
         <div class="box-wrapper">
             <div class="info-wrap">
